# PySoundSphere

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject copy.toml  pyproject.toml  sitemap.xml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy-docs.yaml  run-ruff.yaml  run-tests.yaml
PySoundSphere/: __init__.py  main.py
PySoundSphere/playback_backend/: backend_loader.py  ffplay_backend.py  pygame_backend.py  sounddevice_backend.py
backends/ffplay/: index.html
backends/general/: index.html
backends/pygame/: index.html
backends/sounddevice/: index.html
docs/: index.md  usage.md
docs/backends/: ffplay.md  general.md  pygame.md  sounddevice.md
examples/: MusicPlayer.py  basicExample.py
search/: search_index.json
src/: main.py
src/playback_backend/: backend_loader.py  ffplay_backend.py  pygame_backend.py  sounddevice_backend.py
test/: backend_ffplay_test.py  backend_pygame_test.py
test/audio_files/: 75hz_stereo.flac
usage/: index.html
