[project]
name = "PySoundSphere"
description = "Play Audio Using Python"
version = "0.0.7"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name="Namester (Nmstr)", email="publicNamester@gmail.com" }
]
keywords = ["audio", "playback", "sound"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
[project.urls]
Source = "https://github.com/Nmstr/PySoundSphere"
Documentation = "https://nmstr.github.io/PySoundSphere/"
Issues = "https://github.com/Nmstr/PySoundSphere/issues"

[project.optional-dependencies]
pygame-backend = ["pygame"]
sounddevice-backend = [
  "sounddevice",
  "soundfile",
  "numpy",
]

[tool.ruff]
lint.select = ["E4", "E7", "E9", "F", "N8"]

[tool.ruff.lint.per-file-ignores]
"test/*.py" = ["E712"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
